Maybe fixed navigation gap

--- a/client/www/css/styles.css
+++ b/client/www/css/styles.css
@@ -63,17 +63,11 @@ nav > ul > a {
 	text-decoration: none;
 }
 
-nav > ul > a > li {
+nav > ul > a > li, nav > ul > li {
 	display: inline-block;
-	width: 21%;
+	width: 21.22%; /* Precise enough to remove gap at the end hopefully */
 	padding: 1.5%;
-	text-align: center;
-}
-
-nav > ul > li {
-	display: inline-block;
-	width: 21%;
-	padding: 1.5%;
+	height: 100%;
 	text-align: center;
 }
 
